--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.8.3",
     "vue": "^2.6.12",
     "vue-router": "^3.5.1",
@@ -27,6 +28,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^5.0.0",
+    "flush-promises": "^1.0.2",
     "prettier": "^1.19.1",
     "vue-template-compiler": "^2.6.12"
   }
